--- a/index.html
+++ b/index.html
@@ -17,24 +17,21 @@
 <header>
     <div class="container">
         <a href="#" class="logo">
-            <img src="images/logo.svg" alt="logo">
+            <img src="images/logo.png" alt="logo">
         </a>
         <nav>
             <ul>
                 <li>
-                    <a href="#">Business areas</a>
+                    <a href="#">Хто ми?</a>
                 </li>
                 <li>
-                    <a href="#">Featured images</a>
+                    <a href="#">Отримати допомогу</a>
                 </li>
                 <li>
-                    <a href="#">Gear cage</a>
+                    <a href="#">Контакти</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
-                </li>
-                <li>
-                    <a href="#">Get template</a>
+                    <a href="#">Реєстрація волонтера</a>
                 </li>
             </ul>
         </nav>
@@ -44,32 +41,28 @@
     <section class="main_banner">
         <div class="container">
             <article>
-                <h3>Photographer & Filmmaker</h3>
-                <h1>Aperture Studios</h1>
+                <h3>Отримуй & Допомагай</h3>
+                <h1>UA Helper</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum
-                    tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero
-                    vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus
-                    tristique posuere.
+                    UA Helper - це об'єднання українських волонтерів по всій країні. Ми допомагаємо людям, які через початок повномасштабної війни мусили залишити свої домівки. Долучайся до нас, та допомагай!
                 </p>
             </article>
         </div>
     </section>
     <section class="what_we_do">
         <div class="container">
-            <h3>What we do.</h3>
-            <h4>The areas that we're specialized in.</h4>
+            <h3>Що ми робимо?</h3>
+            <h4>Ми допомагаємо всім, хто постраждав від війни.</h4>
             <div class="cards">
                 <article>
                     <div class="description">
-                        <h4>Product Photography</h4>
+                        <h4>Покинуті міста</h4>
                         <p>
-                            Cras commodo consequat orci, in convallis risus egestas non. Nulla efficitur auctor
-                            hendrerit. Etiam ut orci varius, faucibus libero ac, cursus quam.
+                            З самого початку війни тисячі людей покинули свої домівки. Люди виїжджали всіми можливими дорогами та видами трансопрту. Фото - Reuters
                         </p>
                         <a href="#">Read more</a>
                     </div>
-                    <img src="images/what_we_do_1.jpg" alt="images">
+                    <img src="images/test11222111.JPG" alt="images">
                 </article>
                 <article>
                     <div class="description">
@@ -81,7 +74,7 @@
                         </p>
                         <a href="#">Read more</a>
                     </div>
-                    <img src="images/what_we_do_2.jpg" alt="images">
+                    <img src="images/test2.jpg" alt="images">
                 </article>
                 <article>
                     <div class="description">
@@ -93,7 +86,7 @@
                         </p>
                         <a href="#">Read more</a>
                     </div>
-                    <img src="images/what_we_do_3.jpg" alt="images">
+                    <img src="images/test4.jpg" alt="images">
                 </article>
                 <article>
                     <div class="description">
