--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header>
     <div class="container">
         <a href="#" class="logo">
-            <img src="images/logo.png" alt="logo">
+            <img src="images/logouahelper.svg" alt="logo">
         </a>
         <nav>
             <ul>
@@ -86,7 +86,7 @@
                         </p>
                         <a href="#">Read more</a>
                     </div>
-                    <img src="images/test4.jpg" alt="images">
+                    <img src="images/test5.JPG" alt="images">
                 </article>
                 <article>
                     <div class="description">
@@ -98,7 +98,7 @@
                         </p>
                         <a href="#">Read more</a>
                     </div>
-                    <img src="images/what_we_do_4.jpg" alt="images">
+                    <img src="images/test7.JPG" alt="images">
                 </article>
             </div>
         </div>
