--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         </p>
                         <a href="https://pictures.reuters.com/archive/UKRAINE--GM1E9CL1S7Y01.html">Читати більше</a>
                     </div>
-                    <img src="images/test7.jpg" alt="images">
+                    <img src="images/test7.JPG" alt="images">
                 </article>
             </div>
         </div>
