update project and add footer

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         </p>
                         <a href="https://pictures.reuters.com/archive/UKRAINE--GM1E9CL1S7Y01.html">Читати більше</a>
                     </div>
-                    <img src="images/test11222111.JPG" alt="images">
+                    <img src="images/test11222111.jpg" alt="images">
                 </article>
                 <article>
                     <div class="description">
@@ -123,16 +123,16 @@
                     <img src="images/Come_Back_Alive_logo%201.png" alt= "logo1">
                 </a>
                 <a href="#">
-                    <img src="" alt ="logo2">
+                    <img src="images/pritula.jpg" alt ="logo2">
                 </a>
                 <a href="#">
-                    <img src="" alt= "logo3">
+                    <img src="images/dopomagati.jpg" alt= "logo3">
                 </a>
                 <a href="#">
-                    <img src="images/logotip_4.svg" alt="logo4">
+                    <img src="images/UNITED24_logo%201.png" alt="logo4">
                 </a>
                 <a href="#">
-                    <img src="images/logotip_5.svg" alt="logo5">
+                    <img src="images/kolo.png" alt="logo5">
                 </a>
             </div>
         </div>
@@ -154,5 +154,25 @@
         </article>
     </section>
 </main>
+<!--<FOOTER>-->
+<footer id="footer" class="footer">
+    <div class="footer_container">
+        <ul class="footer_item">
+            <li>
+                <a href="#" class="footer_item"><img src="images/fb.svg" alt="fb"></a>
+            </li>
+            <li>
+                <a href="#" class="footer_item"><img src="images/inst.svg" alt="in"></a>
+            </li>
+            <li>
+                <a href="#" class="footer_item"><img src="images/tw.svg" alt="tw"></a>
+            </li>
+            <a href="#" class="footer_item"><img src="images/link.svg" alt="li"></a>
+            <li>
+        </ul>
+        <div class="footer_text">Copyright ©2022 All rights reserved. Creator - Pyrohov Vladyslav </div>
+    </div>
+</footer>
+</div>
 </body>
 </html>
