--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         </p>
                         <a href="https://pictures.reuters.com/archive/UKRAINE--GM1E9CL1S7Y01.html">Читати більше</a>
                     </div>
-                    <img src="images/test11222111.jpg" alt="images">
+                    <img src="images/last_city.jpg" alt="images">
                 </article>
                 <article>
                     <div class="description">
@@ -82,7 +82,7 @@
                         </p>
                         <a href="https://pictures.reuters.com/archive/UKRAINE--GM1E9CL1S7Y01.html">Читати більше</a>
                     </div>
-                    <img src="images/test6.JPG" alt="images">
+                    <img src="images/rockets.jpg" alt="images">
                 </article>
                 <article>
                     <div class="description">
