final work and add maps and links

--- a/index.html
+++ b/index.html
@@ -114,24 +114,25 @@
             </div>
         </article>
     </section>
+                        <!-- <PARTNERS>-->
     <section class="logotip">
         <div class="logotip_container">
             <h3>Наші партнери</h3>
             <h4>Благодійність</h4>
             <div class="past">
-                <a href="#">
+                <a href="https://savelife.in.ua/" target="_blank">
                     <img src="images/Come_Back_Alive_logo%201.png" alt= "logo1">
                 </a>
-                <a href="#">
+                <a href="https://prytulafoundation.org/" target="_blank">
                     <img src="images/pritula.jpg" alt ="logo2">
                 </a>
-                <a href="#">
+                <a href="https://dobro.privatbank.ua/" target="_blank">
                     <img src="images/dopomagati.jpg" alt= "logo3">
                 </a>
-                <a href="#">
+                <a href="https://u24.gov.ua/uk" target="_blank">
                     <img src="images/UNITED24_logo%201.png" alt="logo4">
                 </a>
-                <a href="#">
+                <a href="https://www.kolo-fund.org/" target="_blank">
                     <img src="images/kolo.png" alt="logo5">
                 </a>
             </div>
@@ -154,23 +155,33 @@
         </article>
     </section>
 </main>
-<!--<FOOTER>-->
+        <!--<MAPS>-->
+<section class="maps">
+    <div class="maps_container">
+        <h3>Де ми знаходимось?</h3>
+        <h4>Дивись маршрут:</h4>
+        <div class="past_iframe">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2645.504685864067!2d35.02853560892446!3d48.46603238847989!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40dbe2fcabfb3357%3A0x461668fe71a4bc26!2z0JTQvdC10L_RgNC-0L_QtdGC0YDQvtCy0YHQutC40Lkg0L7QsdC70LDRgdGC0L3QvtC5INGB0L7QstC10YI!5e0!3m2!1sru!2sua!4v1681407439382!5m2!1sru!2sua" width="1800" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div>
+</section>
+        <!--<FOOTER>-->
 <footer id="footer" class="footer">
     <div class="footer_container">
         <ul class="footer_item">
             <li>
-                <a href="#" class="footer_item"><img src="images/fb.svg" alt="fb"></a>
+                <a href="https://u24.gov.ua/uk" class="footer_item"><img src="images/fb.svg" alt="fb"></a>
             </li>
             <li>
-                <a href="#" class="footer_item"><img src="images/inst.svg" alt="in"></a>
+                <a href="https://u24.gov.ua/uk" class="footer_item"><img src="images/inst.svg" alt="in"></a>
             </li>
             <li>
-                <a href="#" class="footer_item"><img src="images/tw.svg" alt="tw"></a>
+                <a href="https://u24.gov.ua/uk" class="footer_item"><img src="images/tw.svg" alt="tw"></a>
             </li>
-            <a href="#" class="footer_item"><img src="images/link.svg" alt="li"></a>
+            <a href="https://u24.gov.ua/uk" class="footer_item"><img src="images/link.svg" alt="li"></a>
             <li>
         </ul>
-        <div class="footer_text">Copyright ©2022 All rights reserved. Creator - Pyrohov Vladyslav </div>
+        <div class="footer_text">Copyright ©2023 All rights reserved. Creator - Pyrohov Vladyslav </div>
     </div>
 </footer>
 </div>
